# docker-build-cacher

./: .gitignore  .travis.yml  Makefile  README.md  docker-build-cacher.cabal  package.yaml  stack.yaml
app/: Main.hs
src/Docker/: Cacher.hs
src/Docker/Cacher/: Inspect.hs  Internal.hs
