name:                docker-build-cacher
version:             1.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jose Lorenzo Rodriguez
maintainer:          lorenzo@seatgeek.com
copyright:           2017 Jose Lorenzo Rodriguez
category:            Operations
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable docker-build-cacher
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , language-dockerfile
                     , containers
                     , foldl
                     , text
                     , system-filepath
  default-language:    Haskell2010
