name:                docker-build-cacher
version:             1.8.2
synopsis:            Builds a services with docker and caches all of its intermediate stages
description:         A CLI tool to speed up multi-stage docker file builds by caching intermediate
                     stages separately, so the can be used in successive builds.
license:             BSD3
license-file:        LICENSE
author:              Jose Lorenzo Rodriguez
maintainer:          lorenzo@seatgeek.com
copyright:           2017 Seatgeek
category:            Operations
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable docker-build-cacher
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9.1.0 && < 5
                     , turtle
                     , language-docker
                     , containers
                     , foldl
                     , text
                     , system-filepath
  default-language:    Haskell2010
